Delete RobotActionTest file

--- a/ToyRobot_Test/ToyRobot_Test.csproj
+++ b/ToyRobot_Test/ToyRobot_Test.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ToyRobotGame\ToyRobotGame.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ActionsTest\" />
+  </ItemGroup>
+
 </Project>
